[EFL] Fix unused private field warning in WebContextMenuProxyEfl.cpp https://bugs.webkit.org/show_bug.cgi?id=145911

Reviewed by Darin Adler.

* UIProcess/efl/WebContextMenuProxyEfl.cpp:
(WebKit::WebContextMenuProxyEfl::WebContextMenuProxyEfl): Deleted.
* UIProcess/efl/WebContextMenuProxyEfl.h:


Canonical link: https://commits.webkit.org/163974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185509 268f45cc-cd09-0410-ab3c-d52691b4dbfc